# DCF-VALUATIONS

./: Dockerfile  Makefile  README.md  SETUP.md  devcontainer.json  docker-compose-final.yml  main.py  memo_generator_final.py  pyproject.toml  railway.json  reports_renderer_final.py  vercel.json
files-3/: Dockerfile  main.py
valupro-frontend-vercel/: Dockerfile  README.md  next.config.ts  package.json  tailwind.config.ts
valupro-frontend-vercel/app/: globals.css  layout.tsx  page.tsx
valupro-frontend-vercel/app/comps/: page.tsx
valupro-frontend-vercel/app/dashboard/: page.tsx
valupro-frontend-vercel/app/dcf/: page.tsx
valupro-frontend-vercel/app/reports/: page.tsx
valupro-frontend-vercel/app/search/: page.tsx
valupro-frontend-vercel/app/sensitivity/: page.tsx
valupro-frontend-vercel/app/valuation/: page.tsx
valupro-frontend-vercel/components/charts/: FCFFChart.tsx  FootballFieldChart.tsx  SensitivityHeatmap.tsx
valupro-frontend-vercel/components/layout/: Sidebar.tsx  TickerBar.tsx  TopBar.tsx
valupro-frontend-vercel/components/tables/: DCFScheduleTable.tsx  PeerCompsTable.tsx  ScenarioComparisonTable.tsx
valupro-frontend-vercel/components/ui/: index.tsx
valupro-frontend-vercel/hooks/: useCompany.ts  useValuation.ts
valupro-frontend-vercel/lib/: api.ts  formatters.ts  utils.ts
valupro-frontend-vercel/types/: valuation.ts
