# =============================================================================
# ValuPro Backend — canonical Python project configuration
# Single source of truth: replaces requirements.txt for editable installs.
# For Docker: pip install -r requirements.txt (faster, no build step).
# =============================================================================

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "valupro-backend"
version         = "1.0.0"
description     = "Institutional-grade equity valuation platform — backend"
readme          = "README.md"
requires-python = ">=3.12"
license         = {text = "MIT"}

dependencies = [
    # ── Web framework ────────────────────────────────────────────────────────
    "fastapi>=0.111,<0.113",
    "uvicorn[standard]>=0.30,<0.32",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",

    # ── Async HTTP ───────────────────────────────────────────────────────────
    "httpx>=0.27,<0.29",

    # ── Performance ──────────────────────────────────────────────────────────
    "uvloop>=0.19,<0.21",
    "httptools>=0.6,<0.7",

    # ── Database ─────────────────────────────────────────────────────────────
    "asyncpg>=0.29,<0.31",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.13,<2.0",

    # ── Cache ────────────────────────────────────────────────────────────────
    "redis[asyncio]>=5.0,<6.0",
    "hiredis>=2.3,<3.0",

    # ── Security ─────────────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "slowapi>=0.1.9,<0.2.0",

    # ── Data & math ──────────────────────────────────────────────────────────
    "numpy>=1.26,<3.0",

    # ── Visualisation & PDF ──────────────────────────────────────────────────
    "matplotlib>=3.9,<4.0",
    "reportlab>=4.2,<5.0",
    "Pillow>=10.0,<12.0",

    # ── Logging ──────────────────────────────────────────────────────────────
    "structlog>=24.0,<26.0",

    # ── Utilities ────────────────────────────────────────────────────────────
    "python-dateutil>=2.9,<3.0",
    "tenacity>=8.3,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.25",
    "pytest-cov>=5.0,<6.0",
    "pytest-httpx>=0.30,<0.32",
    "pytest-mock>=3.14,<4.0",
    "respx>=0.21,<0.22",
    "freezegun>=1.5,<2.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<4.0",
]

# ── Tool configuration ────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "PTH", "ASYNC"]
ignore = ["E501", "B008"]   # line-length handled by formatter; B008 allows default factories

[tool.ruff.lint.isort]
known-first-party = ["config", "data", "engine", "valuation", "comps", "analysis", "reports", "memo", "api", "logger"]

[tool.mypy]
python_version      = "3.12"
strict              = false    # phase in gradually
ignore_missing_imports = true
warn_return_any     = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-q --tb=short --strict-markers"
markers      = [
    "unit: pure unit tests — no external services",
    "integration: requires live postgres + redis",
    "slow: slow tests (deselect with -m 'not slow')",
    "smoke: minimal end-to-end path checks",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:matplotlib",
]

[tool.coverage.run]
source = ["."]
omit   = ["tests/*", "migrations/*", "*/__init__.py", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
